--- a/src/YeuRecordBackend/src/main/resources/application.properties
+++ b/src/YeuRecordBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=yeurecordBackend
 spring.datasource.url=jdbc:mysql://localhost:3306/yeu_records
-spring.datasource.username=root
+spring.datasource.username=yeu_records
 spring.datasource.password=Manh@2003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
